--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout2"
+        android:id="@+id/linearLayout1"
         android:gravity="center_vertical|center_horizontal">
 
         <TableRow
@@ -53,10 +53,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_alignParentEnd="false"
         android:gravity="center_horizontal"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TableRow
             android:layout_width="wrap_content"
@@ -68,6 +69,7 @@
                 android:id="@+id/btnGato"
                 android:layout_gravity="left|top"
                 android:src="@drawable/gato"
+                android:layout_below="@+id/linearLayout2"
                 android:onClick="playSound" />
 
             <ImageButton
@@ -76,7 +78,58 @@
                 android:id="@+id/btnSantino"
                 android:layout_gravity="left|center_vertical"
                 android:src="@drawable/santino"
+                android:layout_below="@+id/linearLayout2"
                 android:onClick="playSound" />
+
+            <ImageButton
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/btnMatracasi"
+                android:onClick="playSound"
+                android:clickable="false"
+                android:src="@drawable/matraca"
+                android:layout_below="@+id/linearLayout2"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
+        </TableRow>
+
+    </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:id="@+id/linearLayout3"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent">
+
+            <ImageButton
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/btnNachas"
+            android:onClick="playSound"
+            android:clickable="false"
+            android:src="@drawable/guitarra"
+            android:layout_below="@+id/linearLayout3"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+            <ImageButton
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/btnCosaSeria"
+                android:onClick="playSound"
+                android:clickable="false"
+                android:src="@drawable/galatzia"
+                android:layout_below="@+id/linearLayout3"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
 
             <ImageButton
                 android:layout_width="100dp"
@@ -85,7 +138,7 @@
                 android:onClick="playSound"
                 android:clickable="false"
                 android:src="@drawable/share"
-                android:layout_below="@+id/linearLayout"
+                android:layout_below="@+id/linearLayout3"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
 
